MP-3037 role and icon spacing fix

--- a/ui.frontend/src/main/webpack/components/content/core-text/v1/text/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-text/v1/text/style.scss
@@ -64,7 +64,7 @@
         }
     }
 
-	.fa-file-pdf {
+	.svg-inline--fa.fa-file-pdf {
 	    margin-right: 4px;
 	    margin-left: 0px;
     }
